--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="assets/vendor.css">
-  <script src="assets/vendor.js"></script>
+  <link rel="stylesheet" href="assets/vendor5.css">
+  <script src="assets/vendor5.js"></script>
   <title>Silverthin Vendor Report</title>
 
 </head>
@@ -53,11 +53,14 @@
     <!--details-->
     <div class="row">
 
-      <div class="col-lg-2 col-xs-0">
+      <div class="col-md-2 col-xs-0">
       </div>
 
-      <div class="col-lg-8 col-xs-12" style="height:50px; text-align:center; padding-top: 5px">
+      <div class="col-md-8 col-xs-12" style="height:50px; text-align:center; padding: 10px">
 
+        <div style="color:white; padding:2px; font-size: 12px;">EXAMPLE VENDOR PAGE<br>
+          ACTUAL PAGE WILL VARY BETWEEN EACH VENDOR<br><br></div>
+        <!--
         <ul class="nav nav-pills mb-3" role="tablist">
           <li class="nav-item active">
             <a class="nav-link" data-toggle="pill" role="tab" href="#" id="linkA" aria-selected="true">Link A</a>
@@ -66,14 +69,16 @@
             <a class="nav-link" data-toggle="pill" href="#" id="linkB" aria-selected="false">Link B</a>
           </li>
         </ul>
+        -->
 
         <div id="linkAsec">
-          <table class="table table-condensed" style="border: 2px solid black;">
+
+          <table class="table table-condensed">
             <tbody>
-              <!--table body-->
+
               <tr class="rowTop">
                 <td colspan="5">
-                  <center><b>SILVERTHIN NOTES / ISSUES</b>
+                  <center><b>NOTES / ISSUES</b>
                     <br>
                     <div style="font-size: 10px;">CLICK ROW TO DISPLAY DETAILS</div>
                   </center>
@@ -81,103 +86,137 @@
               </tr>
               <tr class="rowHead">
                 <td class="headPM"></td>
-                <td class="head1">PO</td>
-                <td class="head1">INV</td>
-                <td class="headDate">DATE</td>
-                <td class="headDet">DETAILS</td>
+                <td class="head1"></td>
+                <td class="head1"></td>
+                <td class="head1"></td>
               </tr>
 
-              <tr class="iRow" show="1">
+              <tr class="iRow" show="0">
                 <td>
-                  <i class="fas fa-plus" style="display:none"></i>
-                  <i class="fas fa-minus"></i>
+                  <i class="fas fa-plus"></i>
+                  <i class="fas fa-minus" style="display:none"></i>
                 </td>
-                <td>13245</td>
-                <td>1452</td>
-                <td>22/22/2020</td>
-                <td class="rowDet">Something Something Dark Side</td>
+                <td colspan="3">
+                  <table class="iRowMini" style="width:100%">
+                    <tbody>
+                      <tr>
+                        <td colspan="3">ROB MUIR<span style="color:red"> (PRIORITY ITEM)</span><br>
+                          Priority List</td>
+                      </tr>
+                      <tr>
+                        <td style="width:33%">1/5/2020</td>
+                        <td style="width:33%">-</td>
+                        <td style="width:33%">-</td>
+                      </tr>
+                    </tbody>
+                  </table>
               </tr>
 
               <tr class="iRowSub">
-                <td style="border:none; margin:0px;">
-                  <div></div>
+                <td style="border: none; margin: 0px; padding: 0px;">
+                  <div style="display: none;"></div>
                 </td>
-                <td colspan="4" style="border:none; margin:0px;">
-                  <div>
+                <td colspan="3" style="border: none; margin: 0px; padding: 0px;">
+                  <div style="display: none;">
                     <table>
-                      <tr>
-                        <td style="border:none; margin:0px; padding:0px;">fdsafdsf</td>
-                      </tr>
-                      <tr>
-                        <td style="border:none; margin:0px; padding:0px;">fdsafdsf</td>
-                      </tr>
+                      <td
+                      style="width:50px; text-align:center; border:none; margin:0px; padding:0px; padding-right:10px; font-size: 20px; color:red">
+                      <a href="http://google.com">
+                        <i class="fas fa-envelope"></i></a>
+                    </td>
+                      <td style="border:none; border-left:1px solid black; margin:0px; padding:0px; padding-left:5px">
+                        SC140XP0 - INVOICE 4512<br>
+                        SD070CP0 - INVOICE 4545 - need by Friday<br>
+                        SAA17XP0 - INVOICE 4512<br>
+                        SB050AR0 - INVOICE 4589
+                      </td>
                     </table>
                   </div>
                 </td>
               </tr>
 
-              <tr class="iRow" show="1">
+              <tr class="iRow" show="0">
                 <td>
-                  <i class="fas fa-plus" style="display:none"></i>
-                  <i class="fas fa-minus"></i>
+                  <i class="fas fa-plus"></i>
+                  <i class="fas fa-minus" style="display:none"></i>
                 </td>
-                <td>13245</td>
-                <td>1452</td>
-                <td>22/22/2020</td>
-                <td class="rowDet">Something Something Dark Side</td>
+                <td colspan="3">
+                  <table class="iRowMini" style="width:100%">
+                    <tbody>
+                      <tr>
+                        <td colspan="3">PATRICK MAURER<br>
+                          CAPA for INV 4565 (SD100)
+                        </td>
+                      </tr>
+                      <tr>
+                        <td style="width:33%">1/5/2020</td>
+                        <td style="width:33%">INV: 4565</td>
+                        <td style="width:33%">PO: 25632</td>
+                      </tr>
+                    </tbody>
+                  </table>
               </tr>
 
               <tr class="iRowSub">
-                <td style="border:none; margin:0px;">
-                  <div></div>
+                <td style="border: none; margin: 0px; padding: 0px;">
+                  <div style="display: none;"></div>
                 </td>
-                <td colspan="4" style="border:none; margin:0px;">
-                  <div>
-                    TEST
+                <td colspan="3" style="border: none; margin: 0px; padding: 0px;">
+                  <div style="display: none;">
+                    <table>
+                      <td
+                      style="width:50px; text-align:center; border:none; margin:0px; padding:0px; padding-right:10px; font-size: 20px; color:red">
+                      <a href="http://google.com">
+                        <i class="fas fa-envelope"></i></a>
+                    </td>
+                      <td style="border:none; border-left:1px solid black; margin:0px; padding:0px; padding-left:5px">
+                        Please fill out CAPA for this item (see attached)<br>
+                        <a href="http://google.com">(FILE) fddsf fds dsfds.pdf</a>
+                      </td>
+                    </table>
                   </div>
                 </td>
               </tr>
 
-              <tr class="iRow" show="1">
+              <tr class="iRow" show="0">
                 <td>
-                  <i class="fas fa-plus" style="display:none"></i>
-                  <i class="fas fa-minus"></i>
+                  <i class="fas fa-plus"></i>
+                  <i class="fas fa-minus" style="display:none"></i>
                 </td>
-                <td>13245</td>
-                <td>1452</td>
-                <td>22/22/2020</td>
-                <td class="rowDet">Something Something Dark Side</td>
+                <td colspan="3">
+                  <table class="iRowMini" style="width:100%">
+                    <tbody>
+                      <tr>
+                        <td colspan="3">ROB MUIR<br>
+                          INVOICE VS RECEIVING MISMATCH</td>
+                      </tr>
+                      <tr>
+                        <td style="width:33%">1/2/2020</td>
+                        <td style="width:33%">INV: 68688</td>
+                        <td style="width:33%">PO: 22250</td>
+                      </tr>
+                    </tbody>
+                  </table>
               </tr>
 
               <tr class="iRowSub">
-                <td style="border:none; margin:0px;">
-                  <div></div>
+                <td style="border: none; margin: 0px; padding: 0px;">
+                  <div style="display: none;"></div>
                 </td>
-                <td colspan="4" style="border:none; margin:0px;">
-                  <div>
-                    TEST
-                  </div>
-                </td>
-              </tr>
-
-              <tr class="iRow" show="1">
-                <td>
-                  <i class="fas fa-plus" style="display:none"></i>
-                  <i class="fas fa-minus"></i>
-                </td>
-                <td>13245</td>
-                <td>1452</td>
-                <td>22/22/2020</td>
-                <td class="rowDet">Something Something Dark Side</td>
-              </tr>
-
-              <tr class="iRowSub">
-                <td style="border:none; margin:0px;">
-                  <div></div>
-                </td>
-                <td colspan="4" style="border:none; margin:0px;">
-                  <div>
-                    TEST
+                <td colspan="3" style="border: none; margin: 0px; padding: 0px;">
+                  <div style="display: none;">
+                    <table>
+                      <td
+                        style="width:50px; text-align:center; border:none; margin:0px; padding:0px; padding-right:10px; font-size: 20px; color:red">
+                        <a href="http://google.com">
+                          <i class="fas fa-envelope"></i></a>
+                      </td>
+                      <td style="border:none; border-left:1px solid black; margin:0px; padding:0px; padding-left:5px">
+                        Attached is invoice #68688, our PO #22250, from High Speed. They are only charging us for 660
+                        pieces on line two but we received in 670.<br>
+                        <a href="http://google.com">(FILE) fddsf fds dsfds.pdf</a>
+                      </td>
+                    </table>
                   </div>
                 </td>
               </tr>
@@ -187,31 +226,219 @@
         </div>
 
         <div id="linkBsec">
-          <table class="table table-condensed" style="border: 2px solid black; background-color: #ffff99;">
+
+          <table class="table table-condensed">
             <tbody>
-              <!--table body-->
-              <tr class="tabHead">
-                <td colspan="6">
+
+              <tr class="rowTop">
+                <td colspan="5">
                   <center><b>ITEMS AT VENDOR</b>
                     <br>
                     <div style="font-size: 10px;">CLICK ROW TO DISPLAY DETAILS</div>
                   </center>
                 </td>
               </tr>
-              <tr class="tabHead">
-                <td style="width:50px"></td>
-                <td style="width:150px">Part No</td>
-                <td>Part Description</td>
-                <td style="width:50px">Qty</td>
-                <td style="width:50px">UOM</td>
-                <td style="width:50px">Seq</td>
+              <tr class="rowHead">
+                <td class="headPM"></td>
+                <td class="head1"></td>
+                <td class="head1"></td>
+                <td class="head1"></td>
               </tr>
+
+              <tr class="aRow" show="0">
+                <td>
+                  <i class="fas fa-plus"></i>
+                  <i class="fas fa-minus" style="display:none"></i>
+                </td>
+                <td colspan="3">
+                  <table class="iRowMini" style="width:100%">
+                    <tbody>
+                      <tr>
+                        <td colspan="3">SC100XP0 - QTY: 56</td>
+                      </tr>
+                      <tr>
+                        <td style="width:33%">12/22/2020</td>
+                        <td style="width:33%">INV: 6688</td>
+                        <td style="width:33%">PO: 22250</td>
+                      </tr>
+                    </tbody>
+                  </table>
+              </tr>
+
+              <tr class="aRowSub">
+                <td style="border: none; margin: 0px; padding: 0px;">
+                  <div style="display: none;"></div>
+                </td>
+                <td colspan="3" style="border: none; margin: 0px; padding: 0px;">
+                  <div style="display: none;">
+                    ARRIVED FROM High Speed: 12/26/2019<br>
+                    MUST SHIP TO ACE Manufacturing: 1/20/2020<br>
+                  </div>
+                </td>
+              </tr>
+
+              <tr class="aRow" show="0">
+                <td>
+                  <i class="fas fa-plus"></i>
+                  <i class="fas fa-minus" style="display:none"></i>
+                </td>
+                <td colspan="3">
+                  <table class="iRowMini" style="width:100%">
+                    <tbody>
+                      <tr>
+                        <td colspan="3">SC100XP0 - QTY: 56</td>
+                      </tr>
+                      <tr>
+                        <td style="width:33%">12/22/2020</td>
+                        <td style="width:33%">INV: 6688</td>
+                        <td style="width:33%">PO: 22250</td>
+                      </tr>
+                    </tbody>
+                  </table>
+              </tr>
+
+              <tr class="aRowSub">
+                <td style="border: none; margin: 0px; padding: 0px;">
+                  <div style="display: none;"></div>
+                </td>
+                <td colspan="3" style="border: none; margin: 0px; padding: 0px;">
+                  <div style="display: none;">
+                    ARRIVED FROM High Speed: 12/26/2019<br>
+                    MUST SHIP TO ACE Manufacturing: 1/20/2020<br>
+                  </div>
+                </td>
+              </tr>
+
+
+              <tr class="aRow" show="0">
+                <td>
+                  <i class="fas fa-plus"></i>
+                  <i class="fas fa-minus" style="display:none"></i>
+                </td>
+                <td colspan="3">
+                  <table class="iRowMini" style="width:100%">
+                    <tbody>
+                      <tr>
+                        <td colspan="3">SC100XP0 - QTY: 56</td>
+                      </tr>
+                      <tr>
+                        <td style="width:33%">12/22/2020</td>
+                        <td style="width:33%">INV: 6688</td>
+                        <td style="width:33%">PO: 22250</td>
+                      </tr>
+                    </tbody>
+                  </table>
+              </tr>
+
+              <tr class="aRowSub">
+                <td style="border: none; margin: 0px; padding: 0px;">
+                  <div style="display: none;"></div>
+                </td>
+                <td colspan="3" style="border: none; margin: 0px; padding: 0px;">
+                  <div style="display: none;">
+                    ARRIVED FROM High Speed: 12/26/2019<br>
+                    MUST SHIP TO ACE Manufacturing: 1/20/2020<br>
+                  </div>
+                </td>
+              </tr>
+
+
+              <tr class="aRow" show="0">
+                <td>
+                  <i class="fas fa-plus"></i>
+                  <i class="fas fa-minus" style="display:none"></i>
+                </td>
+                <td colspan="3">
+                  <table class="iRowMini" style="width:100%">
+                    <tbody>
+                      <tr>
+                        <td colspan="3">SC100XP0 - QTY: 56</td>
+                      </tr>
+                      <tr>
+                        <td style="width:33%">12/22/2020</td>
+                        <td style="width:33%">INV: 6688</td>
+                        <td style="width:33%">PO: 22250</td>
+                      </tr>
+                    </tbody>
+                  </table>
+              </tr>
+
+              <tr class="aRowSub">
+                <td style="border: none; margin: 0px; padding: 0px;">
+                  <div style="display: none;"></div>
+                </td>
+                <td colspan="3" style="border: none; margin: 0px; padding: 0px;">
+                  <div style="display: none;">
+                    ARRIVED FROM High Speed: 12/26/2019<br>
+                    MUST SHIP TO ACE Manufacturing: 1/20/2020<br>
+                  </div>
+                </td>
+              </tr>
+
+
             </tbody>
           </table>
         </div>
+
+        <div id="linkCsec">
+
+          <table class="table table-condensed">
+            <tbody>
+
+              <tr class="rowTop">
+                <td colspan="5">
+                  <center><b>ARRIVING AT VENDOR</b>
+                    <br>
+                    <div style="font-size: 10px;">CLICK ROW TO DISPLAY DETAILS</div>
+                  </center>
+                </td>
+              </tr>
+              <tr class="rowHead">
+                <td class="headPM"></td>
+                <td class="head1"></td>
+                <td class="head1"></td>
+                <td class="head1"></td>
+              </tr>
+
+              <tr class="bRow" show="0">
+                <td>
+                  <i class="fas fa-plus"></i>
+                  <i class="fas fa-minus" style="display:none"></i>
+                </td>
+                <td colspan="3">
+                  <table class="iRowMini" style="width:100%">
+                    <tbody>
+                      <tr>
+                        <td colspan="3">SC100XP0 - QTY: 56</td>
+                      </tr>
+                      <tr>
+                        <td style="width:33%">12/22/2020</td>
+                        <td style="width:33%">INV: 6688</td>
+                        <td style="width:33%">PO: 22250</td>
+                      </tr>
+                    </tbody>
+                  </table>
+              </tr>
+
+              <tr class="bRowSub">
+                <td style="border: none; margin: 0px; padding: 0px;">
+                  <div style="display: none;"></div>
+                </td>
+                <td colspan="3" style="border: none; margin: 0px; padding: 0px;">
+                  <div style="display: none;">
+                    ARRIVED FROM High Speed: 12/26/2019<br>
+                    MUST SHIP TO ACE Manufacturing: 1/20/2020<br>
+                  </div>
+                </td>
+              </tr>
+
+            </tbody>
+          </table>
+        </div>
+
       </div>
 
-      <div class="col-lg-2 col-xs-0">
+      <div class="col-md-2 col-xs-0">
       </div>
 
     </div>
